HW-10, fixed form buttons align

--- a/src/components/buttons/clear-button/clear-button.module.css
+++ b/src/components/buttons/clear-button/clear-button.module.css
@@ -3,6 +3,7 @@
 .clearButton {
   /* TODO: add cancel color, use red */
   background-color: var(--cancel-button-background);
+  margin-right: 10px;
 }
 
 .clearButton:hover {
